--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ jdk:
 notifications:
   recipients:
     - bal.mukund4u@gmail.com
+    
+sudo: required
 
 before_install:
   - ./test/mysql_setup.sh
